--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marcos Núñez Fotografía</title>
     <link rel="stylesheet" href="./styles.css" />
+    <!-- FUENTES -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <main>
@@ -17,27 +22,28 @@
           <div class="iconosMenuContainer">
             <img
               class="iconosMenu"
-              src="https://img.icons8.com/sf-regular-filled/48/noodles.png"
+              src="/img/icoComida.svg"
               alt="icono-comida"
               id="icoComida"
             />
+            
             <img
               class="iconosMenu"
-              src="https://img.icons8.com/sf-regular-filled/48/groups--v1.png"
-              alt="icono-gente"
-              id="icoGente"
-            />
-            <img
-              class="iconosMenu"
-              src="https://img.icons8.com/forma-light-filled/24/coniferous-tree.png"
+              src="/img/icoNaturaleza.svg"
               alt="icono-arbol"
               id="icoNaturaleza"
             />
             <img
              class="iconosMenu"
-              src="https://img.icons8.com/fluency-systems-filled/48/city-buildings.png"
+              src="/img/icoCiudad.svg"
               alt="icono-ciudad"
               id="icoCiudad"
+            />
+            <img
+              class="iconosMenu"
+              src="/img/icoGente.svg"
+              alt="icono-gente"
+              id="icoGente"
             />
 
           </div>
@@ -49,7 +55,7 @@
           <button id="btnGente" class="boton">G</button>
         </div> -->
         <div class="tituloDiv">
-          <h1 class="titulo" id="tituloId">Marcos Núñez Fotografia</h1>
+          <h1 class="titulo" id="tituloId">Marcos Núñez Fotografía</h1>
         </div>
         <div class="botonContactoDiv">
           <a href="#prueba">
