--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <button id="btnVerTodo">ver más</button>
       </div>
       <div id="prueba">
-        <h2 class="headerPresentacion">Presentación</h2>
+        <h2 class="headerPresentacion"></h2>
       </div>
     </main>
 
