Agrego funcion de pantalla completa

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marcos Núñez Fotografía</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./lightbox.css">
     <!-- FUENTES E ICONOS-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -52,9 +53,9 @@
         </div>
         <div class="btnContactoContainer anim" data-anim="animacionBotones">
           
-          <a id="linkContacto" href="#galeriaId"><button class="btnContacto" >Galería</button>
+          <a id="linkContacto" href="#galeriaId"><button class="btnContacto" id="btnGaleria" >Galería</button>
           <a id="linkContacto" href="#prueba"><button class="btnContacto" >Contacto</button></a>
-          <button class="btnContacto" >Videoclips</button>
+          <button class="btnContacto" id="btnClips">Videoclips</button>
         </div>
       </div>
       <div id="contenedorGlobalFondoBlanco">
@@ -121,122 +122,138 @@
       <div class="flexContainerGlobal" id="containerId">
         <div class="containerGaleria" id="galeriaId">
           <!-- <div class="col"> -->
+            <a href="/img/1.webp" data-lightbox="image-1" data-title="Complejo por la noche">
           <img
             class="ciudad foto anim global"
             data-anim="animacionGaleria"
             src="/img/1.webp"
             alt="Complejo por la noche"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/1.webp" data-lightbox="image-1" data-title="Complejo por la noche">
           <img
             class="ciudad foto anim global"
             data-anim="animacionGaleria"
             src="/img/1.webp"
             alt="Complejo por la noche"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/12.webp" data-lightbox="image-1" data-title="Rambla Montevideo">
           <img
             class="ciudad foto anim global"
             data-anim="animacionGaleria"
             src="/img/12.webp"
             alt="Rambla Montevideo"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/9.webp" data-lightbox="image-1" data-title="Plato de TarTar">
           <img
             class="comida foto anim global"
             data-anim="animacionGaleria"
             src="/img/9.webp"
             alt="Plato de TarTar"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/14.webp" data-lightbox="image-1" data-title="Perro">
           <img
             class="naturaleza foto anim global"
             data-anim="animacionGaleria"
             src="/img/14.webp"
             alt="Perro"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/8.webp" data-lightbox="image-1" data-title="Plato de sushi">
           <img
             class="comida foto anim global"
             data-anim="animacionGaleria"
             src="/img/8.webp"
             alt="Plato de sushi"
             loading="lazy"
-          />
+          /></a>
           <!-- </div>
           <div class="col"> -->
+            <a href="/img/13.webp" data-lightbox="image-1" data-title="Flores rosadas">
           <img
             class="naturaleza foto anim global"
             data-anim="animacionGaleria"
             src="/img/13.webp"
             alt="Flores rosadas"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/11.webp" data-lightbox="image-1" data-title="Cantante, compositor y freestyler Luis Berrutti, también conocido como Morfeo">
           <img
             class="gente foto anim global"
             data-anim="animacionGaleria"
             src="/img/11.webp"
             alt="Cantante, compositor y freestyler Luis Berrutti, tambien conocido como Morfeo"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/7.webp" data-lightbox="image-1" data-title="Plato de sushi">
           <img
             class="comida foto anim global"
             data-anim="animacionGaleria"
             src="/img/7.webp"
             alt="Plato de sushi"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/10.webp" data-lightbox="image-1" data-title="Ramen">
           <img
             class="comida foto anim global"
             data-anim="animacionGaleria"
             src="/img/10.webp"
             alt="Ramen"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/3.webp" data-lightbox="image-1" data-title="Estación de servicio">
           <img
             class="ciudad foto anim global"
             data-anim="animacionGaleria"
             src="/img/3.webp"
             alt="Estacion Axion"
             loading="lazy"
-          />
+          /></a>
           <!-- </div>
           <div class="col"> -->
+            <a href="/img/5.webp" data-lightbox="image-1" data-title="Paisaje mar">
           <img
             class="naturaleza foto anim global"
             data-anim="animacionGaleria"
             src="/img/5.webp"
             alt="Paisaje mar"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/3.webp" data-lightbox="image-1" data-title="Estacion de servicio">
           <img
             class="ciudad foto anim global"
             data-anim="animacionGaleria"
             src="/img/3.webp"
             alt="Estacion Axion"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/6.webp" data-lightbox="image-1" data-title="Plato de sushi">
           <img
             class="comida foto anim global"
             data-anim="animacionGaleria"
             src="/img/6.webp"
             alt="Plato de sushi"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/14.webp" data-lightbox="image-1" data-title="Perro">
           <img
             class="naturaleza foto anim global"
             data-anim="animacionGaleria"
             src="/img/14.webp"
             alt="Perro"
             loading="lazy"
-          />
+          /></a>
+          <a href="/img/4.webp" data-lightbox="image-1" data-title="Avenida">
           <img
             class="ciudad foto anim global"
             data-anim="animacionGaleria"
             src="/img/4.webp"
             alt="Avenida"
             loading="lazy"
-          />
+          /></a>
           <!-- </div> -->
         </div>
       </div>
@@ -301,5 +318,6 @@
     </main>
 
     <script src="./script.js"></script>
+    <script src="./lightbox-plus-jquery.js"></script>
   </body>
 </html>
