--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
         <article id="listaPresentacionContainer">
           <ul class="listaPresentacion" >
             <li class="lista anim" data-anim="animacionTextos">Fumador</li>
-            <li class="lista anim" data-anim="animacionTextos">Falsificaciones digitales</li>
-            <li class="lista anim" data-anim="animacionTextos">15 años de experiencia en boxeo</li>
-            <li class="lista anim" data-anim="animacionTextos">Toda clase de servicios de follografía</li>
-            <li class="lista anim" data-anim="animacionTextos">Egresado de la facultad de la vida y la calle</li>
+            <li class="lista anim" data-anim="animacionTextos">Falsificaciones</li>
+            <li class="lista anim" data-anim="animacionTextos">Experiencia en boxeo</li>
+            <li class="lista anim" data-anim="animacionTextos">Servicios de follografía</li>
+            <li class="lista anim" data-anim="animacionTextos">Vida y calle</li>
           </ul>
         </article>
         <div id="redesSocialesContainer" class="anim" data-anim="animacionPresentacion" >
@@ -300,7 +300,7 @@
       </section>
       <section id="seccionFormularioContainer" class="anim" data-anim="animacionPresentacion">
         <article id="contactameTextoContainer">
-          <span id="contactameTexto" class="">Contacto</span>
+          <span id="contactameTexto" class="">Contáctame</span>
         </article>
         <section id="formularioContainer">
           <form id="formulario" >
@@ -336,8 +336,9 @@
           </form>
         </section>
       </section>
-      
+      <footer>Joaquín Guillén, 2025.<a id="linkFooter" href="https://www.linkedin.com/in/joaqu%C3%ADn-guill%C3%A9n-1396a434a/"><i class="fa fa-linkedin-square" style="font-size:24px;padding-left: 20px"></i></a></footer>
       </div>
+      
     </main>
 
     <script src="./script.js"></script>
