click menu galeria

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
           <div class="bar2 desplegar"></div>
           <div class="bar3 desplegar"></div>
           <div class="iconosMenuContainer">
-            <ul class="listaMenu">
+           <a id="linkMenu" href="#galeriaId"><ul class="listaMenu">
               <li class="iconosMenu" id="icoTodo">Todas</li>
               <li class="iconosMenu" id="icoComida">Culinario</li>
               <li class="iconosMenu" id="icoGente">Personas</li>
               <li class="iconosMenu" id="icoNaturaleza">Naturaleza</li>
               <li class="iconosMenu" id="icoCiudad">Urbano</li>
               <li class="iconosMenu" id="icoClip">Videoclips</li>
-            </ul>
+            </ul></a>
             <!-- <img
               class="iconosMenu"
               src="/img/icoComida.svg"
