--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           </ul>
         </article>
         <div id="redesSocialesContainer" class="anim" data-anim="animacionPresentacion" >
-          <h1 id="redesSocialesTexto" >Mis redes</h1>
+          <h1 id="redesSocialesTexto">Mis redes</h1>
 
           <div id="redesSocialesIconos" >
           <a id="linkRedes"  href="https://www.instagram.com/marcos.nunez64" target="_blank"> <i class="fa fa-instagram icoRedes" style="font-size:64px"></i>
@@ -336,7 +336,7 @@
           </form>
         </section>
       </section>
-      <footer>Joaquín Guillén, 2025.<a id="linkFooter" href="https://www.linkedin.com/in/joaqu%C3%ADn-guill%C3%A9n-1396a434a/"><i class="fa fa-linkedin-square" style="font-size:24px;padding-left: 20px"></i></a></footer>
+      <footer>Joaquín Guillén, 2025.<a id="linkFooter" href="https://www.linkedin.com/in/joaqu%C3%ADn-guill%C3%A9n-1396a434a/"><i class="fa fa-linkedin-square" style="font-size:24px;margin-left: 20px"></i></a></footer>
       </div>
       
     </main>
