--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
       
       <section class="heroContainer">
-        <img class="heroImagen" src="/img/Caravana_FA_-_Minas.webp" />
+        <img class="heroImagen" alt="Caravana Frente Amplio" src="/img/Caravana_FA_-_Minas.webp" />
         <div class="heroTituloContainer">
           <h1 class="heroTitulo anim" data-anim="animacionTituloHero">Marcos  Núñez</h1>
           <!-- <img id="icoCamara" width="50" height="50" src="https://img.icons8.com/ios-filled/50/camera--v1.png" alt="camera--v1"/> -->
