--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@
 
         <article id="listaPresentacionContainer">
           <ul class="listaPresentacion" >
-            <li class="lista anim" data-anim="animacionTextos">Casamientos</li>
+            <li class="lista anim" data-anim="animacionTextos">Fotografía</li>
+            <li class="lista anim" data-anim="animacionTextos">Videografía</li>
+            <li class="lista anim" data-anim="animacionTextos">Edición</li>
             <li class="lista anim" data-anim="animacionTextos">Cumpleaños de 15</li>
-            <li class="lista anim" data-anim="animacionTextos">Producción de video</li>
-            <li class="lista anim" data-anim="animacionTextos">Edición de imágenes y videos</li>
-            <li class="lista anim" data-anim="animacionTextos">Precios totalmente inaccesibles</li>
+            <li class="lista anim" data-anim="animacionTextos">Bodas</li>
           </ul>
         </article>
         <div id="redesSocialesContainer" class="anim" data-anim="animacionPresentacion" >
