Color fuente y sombras

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marcos Núñez Fotografía</title>
+    <!-- <link rel="canonical" href="https://marcosnuñezfotografia.com" /> -->
     <meta name="description" content="Mi nombre es Marcos Núñez, soy un fotógrafo freelance con años de experiencia en el sector.">
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="./lightbox.css">
