--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     />
     <script src="https://player.vimeo.com/api/player.js"></script>
   </head>
-  <body>
+  <body class="">
     <main>
       <section class="heroContainer">
         <img
@@ -193,11 +193,10 @@
             >
           </div>
           <div class="botonContactoDiv">
-            <img
-              src="https://img.icons8.com/fluency-systems-filled/48/user.png"
-              class="iconoContacto"
-              alt="user"
-            />
+            <button class="iconoToggle">
+              <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#1e2939"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Zm0-80q88 0 158-48.5T740-375q-20 5-40 8t-40 3q-123 0-209.5-86.5T364-660q0-20 3-40t8-40q-78 32-126.5 102T200-480q0 116 82 198t198 82Zm-10-270Z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#1e2939"><path d="M440-800v-120h80v120h-80Zm0 760v-120h80v120h-80Zm360-400v-80h120v80H800Zm-760 0v-80h120v80H40Zm708-252-56-56 70-72 58 58-72 70ZM198-140l-58-58 72-70 56 56-70 72Zm564 0-70-72 56-56 72 70-58 58ZM212-692l-72-70 58-58 70 72-56 56Zm268 452q-100 0-170-70t-70-170q0-100 70-170t170-70q100 0 170 70t70 170q0 100-70 170t-170 70Zm0-80q67 0 113.5-46.5T640-480q0-67-46.5-113.5T480-640q-67 0-113.5 46.5T320-480q0 67 46.5 113.5T480-320Zm0-160Z"/></svg>
+            </button>
           </div>
         </div>
         <section class="flexContainerGlobal" id="containerId">
@@ -395,49 +394,13 @@
             ></iframe>
 
             <iframe
+              src="https://player.vimeo.com/video/1126030583?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
               class="videoclip anim"
               data-anim="animacionGaleria"
-              src="https://player.vimeo.com/video/1125727601?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-              frameborder="0"
-              
-              allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              title="Espacio 17a"
-            ></iframe>
-            <iframe
-              class="videoclip anim"
-              src="https://player.vimeo.com/video/1125727601?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
               referrerpolicy="strict-origin-when-cross-origin"
-              title="Espacio 17a"
-            ></iframe>
-            <iframe
-              class="videoclip anim"
-              data-anim="animacionGaleria"
-              src="https://player.vimeo.com/video/1125727601?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-              frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              title="Espacio 17a"
-            ></iframe>
-            <iframe
-              class="videoclip anim"
-              data-anim="animacionGaleria"
-              src="https://player.vimeo.com/video/1125727601?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-              frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              title="Espacio 17a"
-            ></iframe>
-            <iframe
-              class="videoclip anim"
-              data-anim="animacionGaleria"
-              src="https://player.vimeo.com/video/1125727601?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-              frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              title="Espacio 17a"
+              title="DualBoot - Fiesta de fin de año 2024"
             ></iframe>
           </div>
         </section>
