El menu cierra al hacer click fuera

--- a/index.html
+++ b/index.html
@@ -384,16 +384,6 @@
             /></a>
 
             <iframe
-              class="videoclip anim"
-              data-anim="animacionGaleria"
-              src="https://player.vimeo.com/video/1125727601?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-              frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              title="Espacio 17a"
-            ></iframe>
-
-            <iframe
               src="https://player.vimeo.com/video/1126030583?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
               class="videoclip anim"
               data-anim="animacionGaleria"
@@ -402,6 +392,13 @@
               referrerpolicy="strict-origin-when-cross-origin"
               title="DualBoot - Fiesta de fin de año 2024"
             ></iframe>
+            <video
+            src="/video/Espacio 17a.mp4"
+            class="videoclip anim"
+            type="video/mp4"
+            controls
+            loop
+            ></video>
           </div>
         </section>
 
