--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marcos Núñez Fotografía</title>
-    <!-- <link rel="canonical" href="https://marcosnuñezfotografia.com" /> -->
+    <link rel="canonical" href="https://marcosnuñezfotografia.com" />
     <meta
       name="description"
       content="Mi nombre es Marcos Núñez, soy un fotógrafo freelance con años de experiencia en el sector."
@@ -39,7 +39,7 @@
         <img
           class="heroImagen"
           alt="Caravana Frente Amplio"
-          src="/img/Caravana_FA_-_Minas.webp"
+          src="/img/18.webp"
         />
         <div class="heroTituloContainer">
           <h1 class="heroTitulo anim" data-anim="animacionTituloHero">
